--- a/DogYears.xcodeproj/xcshareddata/xcschemes/DogYears.xcscheme
+++ b/DogYears.xcodeproj/xcshareddata/xcschemes/DogYears.xcscheme
@@ -39,6 +39,16 @@
                ReferencedContainer = "container:DogYears.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "88F265B122D01D9900AE3A15"
+               BuildableName = "DogYearsPerformanceTests.xctest"
+               BlueprintName = "DogYearsPerformanceTests"
+               ReferencedContainer = "container:DogYears.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
