Recorded UI test
Signed-off-by: Elias Gabriel <elias.gabrielfn12@gmail.com>

--- a/DogYears.xcodeproj/xcshareddata/xcschemes/DogYears.xcscheme
+++ b/DogYears.xcodeproj/xcshareddata/xcschemes/DogYears.xcscheme
@@ -49,6 +49,16 @@
                ReferencedContainer = "container:DogYears.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "88F265BF22D02B4800AE3A15"
+               BuildableName = "DogYearsUITests.xctest"
+               BlueprintName = "DogYearsUITests"
+               ReferencedContainer = "container:DogYears.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
